version/2.1/_sources/examples/gallery_examples/04-analyses/get_random_vibe_inputs_fields.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\04-analyses\get_random_vibe_inputs_fields.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_04-analyses_get_random_vibe_inputs_fields.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_04-analyses_get_random_vibe_inputs_fields.py:


.. _ref_sherlock_run_analysis:

====================================
Get Random Vibration Analysis inputs
====================================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and retrieve the analysis input fields.

Description
-----------
Sherlock provides the ability to run a random vibration analysis using its gRPC interface.
This script demonstrates how to:
- Connect to the Sherlock service.
- Retrieve the input fields required for random vibration analysis.

This example assumes you have already set up Sherlock and the necessary environment.

For more details on vibration analysis in Sherlock, refer to the official documentation.

.. GENERATED FROM PYTHON SOURCE LINES 46-51

.. code-block:: Python




    from ansys.sherlock.core import launcher








.. GENERATED FROM PYTHON SOURCE LINES 53-56

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 56-59

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\examples\04-analyses\get_random_vibe_inputs_fields.py", line 57, in <module>
        sherlock = launcher.connect(port=9092, timeout=10)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 324, in connect
        raise e
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 298, in connect
        channel = _connect_grpc_channel(
            host=LOCALHOST,
        ...<4 lines>...
            certs_dir=certs_dir,
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 369, in _connect_grpc_channel
        channel = create_channel(
            transport_mode=transport_mode,
        ...<9 lines>...
            ],
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 149, in create_channel
        return create_mtls_channel(host, port, certs_dir, cert_files, grpc_options)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 364, in create_mtls_channel
        raise FileNotFoundError(error_message) from e
    FileNotFoundError: Certificate file not found: certs\ca.crt. Ensure that the certificates are present in the 'certs' folder or set the 'ANSYS_GRPC_CERTIFICATES' environment variable.




.. GENERATED FROM PYTHON SOURCE LINES 60-63

Get Random Vibration Input Fields
=================================
Retrieve the list of input fields for the random vibration analysis.

.. GENERATED FROM PYTHON SOURCE LINES 63-70

.. code-block:: Python


    try:
        random_vibe_input_fields = sherlock.analysis.get_random_vibe_input_fields()
        print("Random vibration analysis input fields:")
        print(random_vibe_input_fields)
    except Exception as e:
        print(f"Error retrieving random vibration input fields: {e}")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.006 seconds)


.. _sphx_glr_download_examples_gallery_examples_04-analyses_get_random_vibe_inputs_fields.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: get_random_vibe_inputs_fields.ipynb <get_random_vibe_inputs_fields.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: get_random_vibe_inputs_fields.py <get_random_vibe_inputs_fields.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: get_random_vibe_inputs_fields.zip <get_random_vibe_inputs_fields.zip>`
